# behapy

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.cfg
etc/: experiment.json  fastFMM.r  fastFMM_post.r  fastFMM_pre.r  fibreconfig.py  medpc_config.json  medpc_map.csv  preprocess.json
examples/: analyse.py  showevents.ipynb  test_sessionmap.py
scratch/: analyse.py  normalise.py  robust_regress.py  runAnalysis.py  run_analysis.py  source_to_raw.py  vis_mask.py
src/behapy/: config.py  console.py  events.py  fibre.py  fp.py  medpc.py  parameters.json  pathutils.py  runAnalysis.py  tdt.py  utils.py  visUtils.py  vis_utils.py  visuals.py
