[metadata]
name = behapy
version = 0.0.1
author = Chris Nolan
author_email = cnolan@gmail.com
description = Behavioural neuroscience data wrangling and analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crnolan/behapy
project_urls =
    Bug Tracker = https://github.com/crnolan/behapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = pandas

[options.packages.find]
where = src
